# AlterEgo

./: .gitignore  .gitmodules  HowToBuildTests.md  LICENSE  README.md
alterego_control/alterego_arms_compliant_control/: CMakeLists.txt  package.xml
alterego_control/alterego_arms_compliant_control/include/: arms_compliant_control.h
alterego_control/alterego_body_movement/alterego_body_inv_dyn/: CMakeLists.txt  package.xml
alterego_control/alterego_face_recognition/: CMakeLists.txt  create_env.sh  package.xml  requirements.txt
alterego_control/alterego_face_recognition/launch/: face_recognition.launch
alterego_control/alterego_face_recognition/scripts/: face_recognition.py
alterego_description/: CMakeLists.txt  README.md  package.xml
alterego_description/meshes/alterego_v4/: salvotto_023_inerzie.txt
alterego_description/models/ego_model/: model.sdf
alterego_description/urdf/: ego_robot.gazebo  ego_robot_gazebo.urdf.xacro
alterego_description/worlds/: empty_world.world  galata_museum.world  galatamuseo.world  traj_planning.world
alterego_description/worlds/Genova_office/: model.config
alterego_description/worlds/galatamuseo/: model.sdf
alterego_error_handler/: CMakeLists.txt  package.xml
alterego_gripper/SoftHand-Plugin/softhand_plugin/: package.xml
alterego_gripper/SoftHand-Plugin/softhands_description/: package.xml
alterego_hw_interfaces/alterego_imu_encoders_wheels/qb_interface_node/: package.xml
alterego_hw_interfaces/alterego_imu_encoders_wheels/sim_qb_interface_node/: CMakeLists.txt  package.xml
alterego_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
alterego_msgs/msg/: DebugLQR.msg  EgoArms.msg
alterego_msgs/srv/: HappyPoseService.srv  LaunchGStreamer.srv  WaitPilotService.srv
alterego_robot/: CMakeLists.txt  package.xml
alterego_robot/alterego_description/urdf/: ego_robot_gazebo_v2.urdf  ego_robot_gazebo_v2.urdf.xacro  ego_robot_gazebo_v3.urdf  ego_robot_gazebo_v3.urdf.xacro
alterego_robot/alterego_description/worlds/: genova_office.world  slope_world.world
alterego_robot/config/: alterego_state.yaml  body.yaml  body_movement.yaml  ego.rviz  example_robot_configuration.yaml  face_expressions.yaml  head.yaml  imu.yaml  pilot.yaml  robot.yaml  sensors.yaml  usb_ports_detector.py  wheels.yaml
alterego_robot/config/v2/: compliant_plugin.yaml  follow_me.yaml  general.yaml  pitch_correction.yaml  sim_variables.yaml
alterego_robot/config/v3/: compliant_plugin.yaml  force_estimation.yaml  general.yaml  general_unity.yaml  pitch_correction.yaml  sim_variables.yaml  vibrotactile_fb.yaml
alterego_robot/config/v4/: compliant_plugin.yaml  general.yaml  sim_variables.yaml
alterego_robot/launch/: arms_compliant_control.launch  body_activation.launch  body_movement.launch  face_expressions.launch  imu.launch  moveit.launch  multimaster.launch  pilot.launch  pilot_unity.launch  reset_robot.launch  rviz.launch  vibrotactile_fb.launch  wheels.launch
alterego_robot/launch_sim/: alterego_stack.launch  body_activation_sim.launch  body_movement_sim.launch  ego_spawn.launch  imu_sim.launch  main.launch  pilot_sim.launch  virtual_cam_sim.launch  wheels_sim.launch
alterego_sensors/alterego_force_estimation/: CMakeLists.txt  package.xml
alterego_sensors/alterego_force_estimation/launch/: optoforce_sensor.launch
alterego_sensors/alterego_force_estimation/src/: forceEstimation.cpp
alterego_state_publisher/: CMakeLists.txt  package.xml
alterego_state_publisher/include/: alterego_state_publisher.h  callbacks_alterego_state_publisher.cpp
alterego_state_publisher/launch/: alterego_state_publisher.launch
alterego_state_publisher/src/: alterego_state_publisher.cpp  main_alterego_state_publisher.cpp
alterego_state_publisher/test/: alterego_state_publisher-test.cpp  test_launch.test
alterego_teleop_bridge/: CMakeLists.txt  package.xml
alterego_teleop_bridge/src/: DiscoveryRobotResponse.py  inbound_data.cpp  inbound_data_unity.cpp
alterego_visualization/: CMakeLists.txt  package.xml
alterego_visualization/include/: visualize_robot.h
alterego_visualization/launch/: visualize_robot.launch
alterego_visualization/src/: visualize_robot.cpp
ego_description/: CMakeLists.txt  package.xml
ego_description/config/: compliant_config.yaml  ego_motors.yaml  ego_particle.rviz  manager_config.yaml  urdf_cam.rviz
ego_description/launch/: display.launch  ego_gazebo.launch  ego_gazebo_v1.launch  ego_gazebo_v2.launch  ego_gzserver.launch
ego_description/src/: .ego_parser.cpp.swp  ego_parser.cpp  ego_parser_kdl.cpp
ego_description/urdf/: ego_robot.gazebo  ego_robot.urdf.xacro  ego_robot_adv.gazebo  ego_robot_compliant.gazebo  ego_robot_gazebo.urdf.xacro  ego_v1_robot_gazebo.urdf.xacro  ego_v2_robot_gazebo.urdf.xacro  model.urdf
ego_description/worlds/: ego.world
msgs/ego_msgs/: CMakeLists.txt  package.xml
msgs/ego_msgs/msg/: AlteregoState.msg  DebugLQR.msg  DetectedObjectInfo.msg  LowerBodyState.msg  RPY.msg  UpperBodyState.msg
reset_robot/: CMakeLists.txt  package.xml
reset_robot/src/: reset_robot.cpp
segway_base/sim_qb_interface_node/: CMakeLists.txt  package.xml
segway_base/sim_qb_interface_node/include/: sim_Sensor.h  sim_qb_class_wheels.h
segway_base/sim_qb_interface_node/src/: main_sim_sensor.cpp  sim_qb_class_wheels.cpp
upper_body/arms_head_comm/: CMakeLists.txt  package.xml
upper_body/arms_head_comm/src/: qb_manager.cpp
upper_body/arms_head_kin/: CMakeLists.txt  package.xml
upper_body/arms_head_kin/include/: arm_inv_kin.h  pseudo_inversion.h
upper_body/arms_head_kin/src/: arm_bridge.cpp  arm_inv_kin.cpp  arm_inv_kin_class.cpp  arm_inv_kin_main.cpp  head_inv_kin.cpp  pitch_correction.cpp
upper_body/sim_arms_head_comm/: CMakeLists.txt  package.xml
upper_body/sim_arms_head_comm/src/: sim_qb_manager.cpp
utils/alterego_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
utils/alterego_moveit_config/config/: ego_robot.srdf  (+9 more)
utils/alterego_teleop_keyboard/: CMakeLists.txt  package.xml
utils/ego_dance/: CMakeLists.txt  package.xml
utils/teleop_keyboard_cpp/: CMakeLists.txt  package.xml
(+350 files in other folders)
