<package format="2">
  <name>alterego_robot</name>
  <version>2.0.2</version>
  <description>
    This package contains the ROS example for single or multiple NMMI devices handling.
  </description>
  <author>IIT SoftBots</author>
  <maintainer email="mattia.poggiani@iit.it">Mattia Poggiani</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>