<package format="2">
  <name>alterego_robot</name>
  <version>2.0.2</version>
  <description>
    This package contains the ROS example for single or multiple NMMI devices handling.
  </description>

  <url type="website">https://www.naturalmachinemotioninitiative.com/ego</url>
  <url type="repository">https://github.com/NMMI/AlterEgo.git</url>

  <author>NMMI</author>
  <author>Istituto Italiano di Tecnologia, Soft Robotics for Human Cooperation and Rehabilitation Lab</author>
  <author>Centro di Ricerca E. Piaggio</author>
  
  <maintainer email="mattia.poggiani@iit.it">Mattia Poggiani</maintainer>
  
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>