<?xml version="1.0"?>
<package format="2">
  <name>ego_description</name>
  <version>0.0.0</version>
  <description>The ego_description package</description>

  <maintainer email="frank@todo.todo">frank</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
  </export>
  
</package>
